# xdg-dbus-proxy

./: .gitignore  .travis.yml  Makefile-docs.am  Makefile.am  NEWS  README.md  SECURITY.md  autogen.sh  backport-autoptr.h  configure.ac  dbus-proxy.c  flatpak-proxy.c  flatpak-proxy.h  meson.build  meson_options.txt  release-checklist.md  xdg-dbus-proxy.xml
.github/workflows/: check.yml
build-aux/: glib-tap.mk  tap-test
tests/: Makefile.am.inc  ci-Dockerfile.in  ci-build.sh  ci-install.sh  meson.build  tap.test.in  test-proxy.c
tests/use-as-subproject/: README  config.h  dummy-config.h.in  meson.build
